# JNU_Research_Accel

./: .gitignore  AUDIT_REPORT_FINAL.md  FINAL_STABILIZATION_REPORT.md  FPGA_AI_Accelerator_Research_Guide.txt  FPGA_AI_Research_References.txt  README.md  check_help.tcl  check_uart.tcl  debug_registers.tcl  enable_uart1_rebuild.tcl  export_xsa.tcl  fix_ps7_and_export.tcl  force_hw_wakeup.tcl  hls_resynth_150mhz.tcl  vivado_rebuild_150mhz.tcl
MemAcc2_app/: main.c  memcopy_accel.c  vitis-comp.json
MemAcc2_app/src/: CMakeLists.txt  UserConfig.cmake  app.yaml  compile_commands.json
Zybo2_platform/: vitis-comp.json
Zybo2_platform/hw/: Zybo_MemAcc_wrapper.bit  Zybo_MemAcc_wrapper.xsa  ps7_init.html
Zybo2_platform/zynq_fsbl/: app.yaml  compile_commands.json
dinh/: ZCU104 & Zybo 활용.md
dinh/docs/: FPGA_Learning_Guide.md  HLS_Development_Guide.md  Lab_Practice_Guide.md  README.md  Troubleshooting_FAQ.md  Weekly_Execution_Roadmap_Checklist.md  ZCU104_User_Guide.md  Zybo_User_Guide.md
dinh/zcu104-baremetal-imgio/: zcu104-baremetal-imgio.md
dinh/zybo_memcopy_accel_interrupt/: README.md
hm_workspace/: .gitignore
hm_workspace/assets/: generate_images.py
hm_workspace/mobilenet/: mobilenet.xpr  mobilenet_wrapper.xsa
hm_workspace/mobilenet/onnx_project/mobilenetV1/project_codex/: CMakeLists.txt  README.md
hm_workspace/mobilenet/onnx_project/mobilenetV1/project_codex/src/: main.cpp  mobilenet_v1.cpp
mobilenet_v1/: mobilenet_v1.py
mobilenet_v1_ten2.x/: mobilenet_v1_train.py
zcu104-a53-mobilenetv1-baseline/: README.md
zcu104-baremetal-imgio/: README.md
(+385 files in other folders)
